<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_1"/>

    <RelativeLayout
        android:id="@+id/relativLayout"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/editTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0sp"
            android:ems="10"
            android:background="@null"
            android:text="@string/title"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/texte"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>



        <ImageButton
            android:id="@+id/ButtonMoreMain"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_alignParentEnd="true"
            android:background="?android:selectableItemBackground"
            app:srcCompat="@drawable/ic_more_foreground"
            app:tint="@color/texte" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layouttotal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativLayout">

        <!-- La liste d'events -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <TextView
                android:id="@+id/editTextTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0sp"
                android:background="@null"
                android:text="@string/title2"
                android:layout_gravity="center_horizontal"
                android:textSize="18dp"
                android:textColor="@color/texte"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ListView
                android:id="@+id/listofevents"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:divider="@null"
                android:dividerHeight="10dp"/>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvstats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0sp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:background="@null"
                android:textAlignment="center"
                android:text="@string/stattitle"
                android:textSize="18dp"
                android:textColor="@color/texte"/>

            <ListView
                android:id="@+id/listofstats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:divider="@null"
                android:dividerHeight="20dp"/>

        </LinearLayout>

        <!-- Les buttons en bas de la page -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnAddWorkout"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:background="@drawable/btn_rectangle_arrondi_orange"
                app:tint="@color/texte"
                android:scaleType="fitCenter"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                app:srcCompat="@drawable/ic_plus_foreground"/>

            <ImageButton
                android:id="@+id/btnAddWorkoutgps"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_rectangle_arrondi_orange"
                android:foreground="?attr/selectableItemBackground"
                app:tint="@color/texte"
                android:scaleType="fitCenter"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                app:srcCompat="@drawable/gps"/>

            <ImageButton
                android:id="@+id/ButtonList"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_rectangle_arrondi_orange"
                android:foreground="?attr/selectableItemBackground"
                app:tint="@color/texte"
                android:scaleType="fitCenter"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                app:srcCompat="@drawable/list"/>

            <ImageButton
                android:id="@+id/ButtonUser"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_rectangle_arrondi_orange"
                android:foreground="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                app:tint="@color/texte"
                app:srcCompat="@drawable/user"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>